flux/application/oauth2-proxy/service.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: oauth2-proxy
  namespace: default
spec:
  hosts:
    - oauth.hydrahmlb.cc
  gateways:
    - istio-ingress/hydrahmlb-gateway
    - istio-public-ingress/hydrahmlb-public-gateway
  http:
    - match:
        - port: 80
      redirect:
        scheme: https
        redirectCode: 301
    - route:
        - destination:
            host: oauth2-proxy.default.svc.cluster.local
            port:
              number: 80
